storage/connect/ha_connect.cc
@@ -4620,7 +4620,7 @@ static bool add_field(String *sql, const char *field_name, int typ,
                       char *dft, char *xtra, int flag, bool dbf, char v)
 {
   char var = (len > 255) ? 'V' : v;
-  bool error= false;
+  bool q, error= false;
   const char *type= PLGtoMYSQLtype(typ, dbf, var);
 
   error|= sql->append('`');
@@ -4661,7 +4661,12 @@ static bool add_field(String *sql, const char *field_name, int typ,
   if (dft && *dft) {
     error|= sql->append(" DEFAULT ");
 
-    if (!IsTypeNum(typ)) {
+    if (typ == TYPE_DATE)
+      q = (strspn(dft, "0123456789 -:/") == strlen(dft));
+    else
+      q = !IsTypeNum(typ);
+
+    if (q) {
       error|= sql->append("'");
       error|= sql->append_for_single_quote(dft, strlen(dft));
       error|= sql->append("'");
